[package]
name = "rsql-rs"
version = "0.1.0"
authors = ["Yukun Luo <yukunl@nvidia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
env_logger = "~0.7"

pest = "~2.0"
pest_derive = "~2.0"

anyhow = "~1.0"
thiserror = "~1.0"
strum = "~0.16"
strum_macros = "~0.16"

regex = "1"
lazy_static = "~1.4"
frunk = "~0.3"
