[package]
name = "rsql"
version = "0.4.3"
authors = ["Ukonn Ra <ukonnra@outlook.com>"]
edition = "2018"
repository = "https://github.com/UkonnRa/rsql-rs.git"
homepage = "https://github.com/UkonnRa/rsql-rs"
description = "A FIQL/RSQL parser written in Rust and Pest"
license = "MIT"

keywords = ["FIQL", "RSQL", "parser"]

[dependencies]
log = "~0.4"
env_logger = "~0.7"

pest = "~2.0"
pest_derive = "~2.0"

anyhow = "~1.0"
thiserror = "~1.0"
strum = "~0.16"
strum_macros = "~0.16"
itertools = "~0.8"

regex = "1"
lazy_static = "~1.4"

serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

[badges]
travis-ci = { repository = "UkonnRa/rsql-rs" }
